# residential-energy-intelligence-agent-platform

./: .gitignore  README.md  docker-compose.yml  schema.sql
backend/: .env.example  README.md  config.py  go.mod  go.sum  main.go  main.py  pyproject.toml
backend/app/: __init__.py  api.py  errors.py  extensions.py  models.py
backend/app/routes/: __init__.py  agent.py  analysis.py  chat.py  classifications.py  datasets.py  detections.py  forecasts.py  health.py  reports.py  system.py
backend/app/services/: agent_service.py  analysis_service.py  chat_service.py  classification_service.py  common.py  dataset_service.py  detection_service.py  forecast_service.py  health_service.py  llm_client.py  report_service.py  system_service.py
backend/app/tools/: md2pdf.py
backend/cmd/api/: main.go
backend/internal/appstart/: run.go
backend/internal/bootstrap/: app.go  database.go  logger.go
backend/internal/config/: config.go
backend/internal/domain/: advice.go  analysis.go  chat.go  classification.go  dataset.go  forecast.go  llm_config.go  report.go  system_config.go
backend/internal/job/: executor.go
backend/internal/repository/: analysis_result_repository.go  chat_message_repository.go  chat_session_repository.go  classification_result_repository.go  dataset_repository.go  energy_advice_repository.go  llm_config_repository.go  (+3 more)
backend/models/: classification.py  common.py  detection.py  forecast.py  forecast_postprocess.py  forecast_postprocess_worker.py  lstm_model.py  models.go
models/: README.md  cuda_test.py  export_validation_upload_samples.py  main.py  mps_test.py  pyproject.toml  requirements.txt
models/classification/: __init__.py
models/common/: __init__.py  config_validation.py  device.py
models/data/: __init__.py  export_upload_samples.py  process.md
models/forecast/: __init__.py  test_plots.py
models_agent/: .env.example  .gitignore  README.md  debug_forecast_api.py  main.py  pyproject.toml  requirements.txt
models_agent/app/: __init__.py  bootstrap.py  config.py  contracts.py  errors.py  http.py
models_agent/configs/: agent.yaml  classification.yaml  forecast.yaml  forecast_profile_classification.yaml
models_agent/tests/: test_agent_workflow.py
(+330 files in other folders)
