[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.6",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "cryptography>=42.0",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "reportlab>=4.2",
]
