[project]
name = "models"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "xlsxwriter>=3.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "torch>=2.6",
    "torchvision>=0.21",  # 加上这个！
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# CUDA 12.6 专用索引
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
